:sparkles: feat: implementa sistema de automação diária completo
🚀 Principais mudanças:
- feat: adiciona workflow GitHub Actions de atualização diária
- feat: cria scripts de automação de dashboard e relatórios
- refatoração: migra de execução semanal para diária

🔧 Scripts adicionados:
- dashboard-updater.sh: atualiza métricas em tempo real

📊 Melhorias no dashboard:
- Badges dinâmicos com progresso real das issues
- Sincronização automática com GitHub Issues
- Cálculo automático de médias e estatísticas

⚙️ Configurações:
- Workflow diário às 09:00 UTC (06:00 BRT)
- Sistema de backup automático
- Validações de integridade completas"

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-# Diretórios de documentação e planejamento
+# Diretórios
 tutoriais_utilização/
 futuras_implementacoes/
+planos_ensino/
+issues_disciplinas/
+scripts/scripts_testes/
+disciplinas/
 
 # Arquivo específico de trilhas
 TrilhasNetacad.md
+
+
