--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -45,8 +45,8 @@ jobs:
           
       - name: Commit and push changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "🤖 GitHub Action Bot"
+          git config --local user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --local user.name "${{ github.actor }}"
           git add .
           
           if git diff --staged --quiet; then
