🔧 Scripts: Refatoração dashboard-updater.sh + Sistema weekly-report.sh v2.0.0
- dashboard-updater.sh: Simplificou update_discipline() e melhorou regex Perl
- weekly-report.sh: Implementou sistema completo de relatórios semanais automatizados
- Preparação para automação via GitHub Actions (execução dominical)
- Preserva integridade do DASHBOARD_KPIS.md e cria histórico semanal

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ planos_ensino/
 issues_disciplinas/
 scripts/scripts_testes/
 disciplinas/
+github-pages-setup/
 
 # Arquivo específico de trilhas
 TrilhasNetacad.md
-
-
+github-pages-setup/README.md
+/workspaces/carreira-infra-security/github-pages-setup/README.md
